# exam-solver-backend

./: .dockerignore  .env.railway  .env.sample  .gitignore  Dockerfile  Dockerfile.celery  Makefile  celery.sh  docker-compose-prod.yml  docker-compose.yml  gunicorn.py  nginx.conf  proxy_lambda.py  pyproject.toml  script.sh
app/: admin.py  apps.py  models.py  serializers.py  tasks.py  utils.py  views.py
app/migrations/: 0001_initial.py  0002_alter_exam_status.py  0003_exam_by_pass_is_blocked_exam_date.py  0004_alter_exam_status.py  0005_exam_input_document.py  0006_exam_label.py
app/prompts/: answer.txt  answer_from_context.txt  answer_from_gpt_search_model.txt  questions.txt
app/services/: ai_flows.py  ai_utils.py  answer_flow.py  google_search.py  questions_flow.py  s3_service.py  selenium_scrapper.py  storage.py
core/: constants.py  settings.py  urls.py
core/services/: open_ai.py
env_files/: .env.railway  .env.sample
